test/fail/optargs/variants_cannot_optarg.lly
#[
SyntaxError: Variant types cannot have default values.
    from variants_cannot_optarg.lly:7:
]#

enum Test {
    Check(*Integer),
    Blank
}
